<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout03"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp" >

    <LinearLayout 
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityname" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="7" >

        <requestFocus android:layout_width="wrap_content" />
     
    </EditText>
     
    <Button 
        android:id="@+id/savePreference"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/savePreference"/>
    
    </LinearLayout>




    
    <LinearLayout 
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        
    <Button
        android:id="@+id/savebutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/saveConfig" />
   
    <Button
        android:id="@+id/update_db"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cancelConfig" />
    </LinearLayout>
    
    <ListView 
        android:id="@+id/cityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_above="@id/bottom">
        
    </ListView>
</RelativeLayout>